package protomsg;

message Config {
	optional string server_name = 1 [default = "server"];
	optional string log_dir = 2 [default = "log/"];

	enum LogSepTime {
		NONE = 0;
		YEAR = 1;
		MOUNTH = 2;
		DAY = 3;
		HOUR = 4;
		MINUTE = 5;
		SECOND = 6;
	}
	optional LogSepTime log_sep_time = 3 [default = NONE];

	message Port {
		required string addr = 1;
		optional string tls_cert_file = 2;
		optional string tls_key_file = 3;
		optional string rsa_key_pem = 4;	// PKCS1 OAEP sha1 any key length
	}
	repeated Port ports = 4;

	message App {
		required string name = 1;
		required string type = 2;
		optional string setup_string = 3;
		repeated string use_ports = 4;
	}
	repeated App apps = 5;
}
